# dgit-daemon

./: .env.example  .gitmodules  Cargo.toml  setup_ipfs.sh
crates/cli/: Cargo.toml  README.md
crates/cli/src/: client.rs  config.rs  main.rs
crates/cli/src/commands/: account.rs  daemon.rs  mod.rs  repo.rs
crates/daemon/: Cargo.toml  ROLE_MANAGEMENT_API.md
crates/daemon/src/: main.rs  state.rs
crates/daemon/src/handlers/: create_repo.rs  git_info_refs.rs  git_receive_pack.rs  git_upload_pack.rs  health.rs  mod.rs  role_management.rs
crates/onchain/: .gitignore  Cargo.toml  aderyn-report.md  foundry.toml  package-lock.json  package.json
crates/onchain/contracts/: RepositoryContract.sol
crates/onchain/src/: config.rs  contract_interaction.rs  ipfs.rs  lib.rs
crates/onchain/test/: RepositoryContract.t.sol
dgit-mono/: Cargo.toml
