[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dgit"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
daemon = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
toml = "0.8"
dialoguer = "0.11"
colored = "2.1"
